--- a/finance/gnucash/Makefile
+++ b/finance/gnucash/Makefile
@@ -1,7 +1,6 @@
-# $NetBSD: Makefile,v 1.239 2016/12/04 05:17:27 ryoon Exp $
+# $NetBSD: Makefile,v 1.240 2016/12/19 10:19:22 wiz Exp $
 
-DISTNAME=		gnucash-2.6.14
-PKGREVISION=		1
+DISTNAME=		gnucash-2.6.15
 CATEGORIES=		finance
 MASTER_SITES=		${MASTER_SITE_SOURCEFORGE:=gnucash/}
 EXTRACT_SUFX=		.tar.bz2
