--- a/textproc/pugixml/Makefile
+++ b/textproc/pugixml/Makefile
@@ -1,6 +1,7 @@
-# $NetBSD: Makefile,v 1.2 2016/11/28 12:39:41 wiz Exp $
+# $NetBSD: Makefile,v 1.3 2016/12/23 03:34:41 ryoon Exp $
 
 DISTNAME=	pugixml-1.8.1
+PKGREVISION=	1
 CATEGORIES=	textproc
 MASTER_SITES=	${MASTER_SITE_GITHUB:=zeux/}
 GITHUB_TAG=	v${PKGVERSION_NOREV}
@@ -13,5 +14,7 @@ LICENSE=	mit
 USE_LANGUAGES=	c c++
 USE_TOOLS+=	gmake
 USE_CMAKE=	yes
+
+CMAKE_ARGS+=	-DBUILD_SHARED_LIBS=ON
 
 .include "../../mk/bsd.pkg.mk"
