--- a/audio/mpg123/Makefile.common
+++ b/audio/mpg123/Makefile.common
@@ -1,4 +1,4 @@
-# $NetBSD: Makefile.common,v 1.41 2016/12/18 22:58:34 adam Exp $
+# $NetBSD: Makefile.common,v 1.42 2016/12/23 13:50:03 wiedi Exp $
 #
 # used by audio/mpg123-arts/Makefile
 # used by audio/mpg123-esound/Makefile
@@ -18,6 +18,7 @@ MAINTAINER=	martin@NetBSD.org
 HOMEPAGE=	http://www.mpg123.org/
 COMMENT?=	Contains the ${MPG123_MODULE} module for mpg123
 
+USE_LANGUAGES=		c99
 USE_LIBTOOL?=		yes
 USE_TOOLS+=		pkg-config gmake
 GNU_CONFIGURE?=		yes
@@ -26,6 +27,8 @@ CONFIGURE_ENV+=		BUILD_${MPG123_MODULE:tu}=yes
 CONFIGURE_ENV+=		MPG123_MODULE=${MPG123_MODULE:Q}
 
 DISTINFO_FILE=		${.CURDIR}/../../audio/mpg123/distinfo
+
+CPPFLAGS.SunOS+=	-D_XOPEN_SOURCE=600 -D__EXTENSIONS__
 
 .if !defined(MPG123_BUILDING_BASE)
 INSTALLATION_DIRS+=	lib/mpg123
