--- a/graphics/opencv/Makefile
+++ b/graphics/opencv/Makefile
@@ -1,4 +1,4 @@
-# $NetBSD: Makefile,v 1.64 2016/08/17 00:06:42 ryoon Exp $
+# $NetBSD: Makefile,v 1.65 2016/12/24 00:00:06 markd Exp $
 
 DISTNAME=	opencv-3.1.0
 PKGREVISION=	2
@@ -41,6 +41,9 @@ CMAKE_ARGS.SunOS+=	-DENABLE_PRECOMPILED_HEADERS=NO
 CMAKE_ARGS+=		-DWITH_EIGEN=NO
 
 CONFIGURE_ENV+=		MACHINE_ARCH=${MACHINE_ARCH}
+
+# jasper uses SIZE_MAX and friends in its headers.
+CXXFLAGS+=		-D__STDC_LIMIT_MACROS
 
 .include "../../devel/zlib/buildlink3.mk"
 .include "../../graphics/jasper/buildlink3.mk"
