--- a/devel/ruby-gnome2-gio/Makefile
+++ b/devel/ruby-gnome2-gio/Makefile
@@ -1,14 +1,16 @@
-# $NetBSD: Makefile,v 1.18 2016/04/16 17:41:03 tsutsui Exp $
+# $NetBSD: Makefile,v 1.19 2016/12/25 18:58:05 tsutsui Exp $
 #
 
 DISTNAME=		gio2-${VERSION}
 PKGNAME=		${RUBY_PKGPREFIX}-gnome2-gio-${VERSION}
+PKGREVISION=		1
 COMMENT=		Ruby binding of gio-2.0.x
 CATEGORIES=		devel
 
 CONFLICTS+=		ruby[0-9][0-9]-gnome2-gio-[0-9]*
 
 DEPENDS+=		${RUBY_PKGPREFIX}-gnome2-glib>=${VERSION}:../../devel/ruby-gnome2-glib
+DEPENDS+=		${RUBY_PKGPREFIX}-gnome2-gobject-introspection>=${VERSION}:../../devel/ruby-gnome2-gobject-introspection
 
 .include "../../devel/glib2/buildlink3.mk"
 .include "../../devel/ruby-gnome2-glib/buildlink3.mk"
