--- a/devel/cre2/Makefile
+++ b/devel/cre2/Makefile
@@ -1,4 +1,4 @@
-# $NetBSD: Makefile,v 1.3 2016/10/17 14:06:39 mef Exp $
+# $NetBSD: Makefile,v 1.4 2016/12/25 21:43:56 joerg Exp $
 
 DISTNAME=	cre2
 PKGNAME=	cre2-0.1b6
@@ -17,7 +17,7 @@ USE_LIBTOOL=	yes
 USE_LANGUAGES+=	c c++
 USE_TOOLS+=	autoconf autoreconf automake gmake makeinfo
 # to avoid configure: error: test for RE2 header failed
-CPPFLAGS+=	-std=c++11
+CXXFLAGS+=	-std=c++11
 
 INFO_FILES=	yes
 
